@@ -1,3 +1,7 @@
+2011-04-16  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* shapefil.h: avoid warnings with SHP_CVSID on gcc.
+
 2010-12-06  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* dbfopen.c: fix read past end of init data fetching code page 
